--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,8 +16,9 @@
 }
 
 body {
-    background: url("../public/images/background.png") no-repeat;
-    background-size: cover;
+    /* background: url("../public/images/background.png") no-repeat; */
+    /* background-size: cover; */
+    background: rgb(16, 13, 36);
     font-family: var(--general-font);
     overflow-x: hidden;
 }
@@ -25,7 +26,7 @@ body {
 .container {
     width: 100vw;
     margin: auto;
-    padding: 20px;
+    padding: 10px;
     /* background-color: var(--card-bg); */
 }
 
@@ -74,7 +75,7 @@ a {
     font-size: 15px;
     line-height: 24px;
     color: #737373;
-    z-index: 100;
+    z-index: 0;
     position: sticky;
 }
 
